# DjangoTutorial

./: .gitignore  pyproject.toml
pollsapp/contact/: forms.py  models.py  task.py  urls.py  views.py
pollsapp/contact/migrations/: 0001_initial.py
pollsapp/polls/: admin.py  models.py  urls.py  views.py
pollsapp/polls/migrations/: 0001_initial.py
pollsapp/pollsapp/: celery.py  settings.py  urls.py
pollsapp/static/: base.css
pollsapp/static/contact/: contact.css
pollsapp/templates/: base.html
pollsapp/templates/contact/: index.html  success.html
pollsapp/templates/pages/: index.html
pollsapp/templates/partials/: _navbar.html
pollsapp/templates/polls/: detail.html  index.html  results.html
