[project]
name = "polls"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Zagavieros",email = "n.zagavieros@dimersoftware.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "celery (>=5.5.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
